more work on fancy motion profile. Init complete, just need exe